[package]
name = "tree-rust"
version = "0.2.0"
edition = "2021"
authors = ["Ban921"]
description = "A fast, feature-rich implementation of the Linux tree command"
license = "MIT"
repository = "https://github.com/Ban921/tree-rust"
homepage = "https://github.com/Ban921/tree-rust"
readme = "README.md"
keywords = ["tree", "directory", "cli", "terminal", "filesystem"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
glob = "0.3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
atty = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
